# wiki-json-loader

./: .gitignore  Cargo.toml  README.md
sample/azure_cognitive_search/: azure.yaml.sample  index_schema.json  index_schema_hybrid.json  index_schema_ngram.json
sample/elasticsearch/: es.yaml  index_schema.json  index_schema_flat.json
sample/elasticsearch_wiki_extractor_rs/: es.yaml  index_schema.json
src/: lib.rs  loader.rs  main.rs  output.rs
src/loader/: document.rs  loader.rs
src/output/: azure_search.rs  azure_search_output.rs  elasticsearch_output.rs  mod.rs
