[package]
name = "wiki-json-loader"
version = "0.1.0"
authors = ["Jun Ohtani <johtani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elasticsearch = "7.5.2-alpha.1"
clap = "2.33.0"
glob = "0.3.0"
url = "2.1.1"